More improvements to the layout of the media info page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,6 +156,7 @@
 /* Custom scrollbar for Webkit browsers */
 .custom-scrollbar::-webkit-scrollbar {
   width: 8px; /* Width of the scrollbar */
+  height: 6px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
